force-app/main/default/objects/Scenario_Model_Input__c.object
<CustomObject>
    <description>Used to select what type of input is involved in this scenario such as a swap between a product currently being used and a more efficient product and the resulting emissions differentials over all annual periods covered.</description>
    <fields>
        <fullName>Abatement_Cost__c</fullName>
        <label>Abatement Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Abatement_Cost_per_tCO2e_Saved__c</fullName>
        <formula>Abatement_Cost__c /  Total_Scenario_Emissions_Savings_tCO2e__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abatement Cost per tCO2e Saved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baseline_Year__c</fullName>
        <formula>TEXT(Scenario_Model__r.Baseline_Year__c)</formula>
        <label>Baseline Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESG_Initiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ESG Initiative</label>
        <referenceTo>ESG_Initiative__c</referenceTo>
        <relationshipLabel>Scenario Model Inputs</relationshipLabel>
        <relationshipName>Scenario_Model_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Input_Category__c</fullName>
        <label>Input Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Input_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased Goods and Services</fullName>
                </value>
                <value>
                    <fullName>Capital Goods</fullName>
                </value>
                <value>
                    <fullName>Fuel and Energy-Related Activities</fullName>
                </value>
                <value>
                    <fullName>Upstream Transportation and Distribution</fullName>
                </value>
                <value>
                    <fullName>Waste Generated In Operations</fullName>
                </value>
                <value>
                    <fullName>Business Travel</fullName>
                </value>
                <value>
                    <fullName>Employee Commuting</fullName>
                </value>
                <value>
                    <fullName>Upstream Leased Assets</fullName>
                </value>
                <value>
                    <fullName>Downstream Transportation and Distribution</fullName>
                </value>
                <value>
                    <fullName>Processing of Sold Products</fullName>
                </value>
                <value>
                    <fullName>Use of Sold Products</fullName>
                </value>
                <value>
                    <fullName>End-of-Life Treatment of Sold Products</fullName>
                </value>
                <value>
                    <fullName>Downstream Leased Assets</fullName>
                </value>
                <value>
                    <fullName>Franchises</fullName>
                </value>
                <value>
                    <fullName>Investments</fullName>
                </value>
                <value>
                    <fullName>Commercial Buildings</fullName>
                </value>
                <value>
                    <fullName>Data Centers</fullName>
                </value>
                <value>
                    <fullName>Fleet Vehicles</fullName>
                </value>
                <value>
                    <fullName>Private Jets</fullName>
                </value>
                <value>
                    <fullName>Uncategorized</fullName>
                    <isActive>false</isActive>
                    <label>Uncategorized</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Input_Type__c</fullName>
        <label>Input Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scope 1 Emissions</fullName>
                </value>
                <value>
                    <fullName>Scope 2 Emissions</fullName>
                </value>
                <value>
                    <fullName>Scope 3 Emissions</fullName>
                </value>
                <value>
                    <fullName>Product Swap</fullName>
                </value>
                <value>
                    <fullName>Renewable Energy Certificates</fullName>
                </value>
                <value>
                    <fullName>Carbon Credits</fullName>
                    <isActive>false</isActive>
                    <label>Carbon Credits</label>
                </value>
                <value>
                    <fullName>Commercial Building Fuel Consumption</fullName>
                    <isActive>false</isActive>
                    <label>Commercial Building Fuel Consumption</label>
                </value>
                <value>
                    <fullName>Data Center Fuel Consumption</fullName>
                    <isActive>false</isActive>
                    <label>Data Center Fuel Consumption</label>
                </value>
                <value>
                    <fullName>Private Jet Fuel Consumption</fullName>
                    <isActive>false</isActive>
                    <label>Private Jet Fuel Consumption</label>
                </value>
                <value>
                    <fullName>Vehicle Fuel Consumption</fullName>
                    <isActive>false</isActive>
                    <label>Vehicle Fuel Consumption</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scenario_Logic_Coefficient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario Logic Coefficient</label>
        <referenceTo>Scenario_Logic_Coefficient__c</referenceTo>
        <relationshipLabel>Scenario Model Inputs</relationshipLabel>
        <relationshipName>Scenario_Model_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scenario_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario Model</label>
        <referenceTo>Scenario_Model__c</referenceTo>
        <relationshipLabel>Scenario Model Inputs</relationshipLabel>
        <relationshipName>Scenario_Model_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope_1_Baseline_Emissions__c</fullName>
        <label>Scope 1 Baseline Emissions</label>
        <summarizedField>Scenario_Model_Input_Period__c.Scope_1_Baseline_Emissions__c</summarizedField>
        <summaryForeignKey>Scenario_Model_Input_Period__c.Scenario_Model_Input__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scope_1_Scenario_Emissions__c</fullName>
        <label>Scope 1 Scenario Emissions</label>
        <summarizedField>Scenario_Model_Input_Period__c.Scope_1_Scenario_Emissions__c</summarizedField>
        <summaryForeignKey>Scenario_Model_Input_Period__c.Scenario_Model_Input__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scope_2_LB_Baseline_Emissions__c</fullName>
        <label>Scope 2 LB Baseline Emissions</label>
        <summarizedField>Scenario_Model_Input_Period__c.Scope_2_LB_Baseline_Emissions__c</summarizedField>
        <summaryForeignKey>Scenario_Model_Input_Period__c.Scenario_Model_Input__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scope_2_LB_Scenario_Emissions__c</fullName>
        <label>Scope 2 LB Scenario Emissions</label>
        <summarizedField>Scenario_Model_Input_Period__c.Scope_2_LB_Scenario_Emissions__c</summarizedField>
        <summaryForeignKey>Scenario_Model_Input_Period__c.Scenario_Model_Input__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scope_2_MB_Baseline_Emissions__c</fullName>
        <label>Scope 2 MB Baseline Emissions</label>
        <summarizedField>Scenario_Model_Input_Period__c.Scope_2_MB_Baseline_Emissions__c</summarizedField>
        <summaryForeignKey>Scenario_Model_Input_Period__c.Scenario_Model_Input__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scope_2_MB_Scenario_Emissions__c</fullName>
        <label>Scope 2 MB Scenario Emissions</label>
        <summarizedField>Scenario_Model_Input_Period__c.Scope_2_MB_Scenario_Emissions__c</summarizedField>
        <summaryForeignKey>Scenario_Model_Input_Period__c.Scenario_Model_Input__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scope_3_Baseline_Emissions__c</fullName>
        <label>Scope 3 Baseline Emissions</label>
        <summarizedField>Scenario_Model_Input_Period__c.Scope_3_Baseline_Emissions__c</summarizedField>
        <summaryForeignKey>Scenario_Model_Input_Period__c.Scenario_Model_Input__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scope_3_Scenario_Emissions__c</fullName>
        <label>Scope 3 Scenario Emissions</label>
        <summarizedField>Scenario_Model_Input_Period__c.Scope_3_Scenario_Emissions__c</summarizedField>
        <summaryForeignKey>Scenario_Model_Input_Period__c.Scenario_Model_Input__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Target_Year__c</fullName>
        <formula>TEXT(Scenario_Model__r.Target_Year__c)</formula>
        <label>Target Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Baseline_Emissions_tCO2e__c</fullName>
        <formula>Scope_1_Baseline_Emissions__c + Scope_2_MB_Baseline_Emissions__c + Scope_3_Baseline_Emissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Baseline Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scenario_Emissions_Savings__c</fullName>
        <formula>Total_Scenario_Emissions_Savings_tCO2e__c / Total_Baseline_Emissions_tCO2e__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Scenario Emissions Savings (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Scenario_Emissions_Savings_tCO2e__c</fullName>
        <formula>Total_Baseline_Emissions_tCO2e__c - Total_Scenario_Emissions_tCO2e__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Scenario Emissions Savings (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scenario_Emissions_tCO2e__c</fullName>
        <formula>Scope_1_Scenario_Emissions__c + Scope_2_MB_Scenario_Emissions__c + Scope_3_Scenario_Emissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Scenario Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Scenario Model Input</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Input_Type__c</columns>
        <columns>Total_Scenario_Emissions_Savings_tCO2e__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scenario Model Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Model Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>